# cognite-quickstart

./: .gitignore  README.md  check_all_files.py  check_dm_isuploaded.py  check_samples_file.py  check_upload_status.py  check_valhall_files.py  config.all-hw.yaml  config.all.yaml  config.app-packages-dm.yaml  config.app-packages-zips.yaml  config.hw-all.yaml  config.hw-dm-crud-streamlit.yaml  config.hw-dm-neat-cli.yaml  config.hw-function.yaml  config.hw-neat-brent.yaml  config.hw-neat-brentgr.yaml  config.hw-neat-brentgr2.yaml  config.hw-neat.yaml  config.hw-transformations.yaml  config.neat-basic.yaml  config.streamlit-github-deployer.yaml  config.test-toolkit-api.yaml  cursor-prompts.md  delete_and_reupload_samples.py  delete_dm_files.py  delete_duplicate_files.py  delete_files.sql  delete_old_dm_instance.py  delete_old_duplicate.py  delete_old_samples_file.py  delete_orphaned_file.py  delete_unuploaded_quickstart.py  force_delete_samples.py  inspect_samples_mini_zip.py  pyproject.toml  quick_check_mini_zips.py  readme.hw-all.md  readme.hw-function.md  readme.hw-neat.md  (+4 more)
bootstrap/: .gitignore  QUICK_TEST.md  README.md  SUMMARY.md  TESTING.md  deploy.py  generate_notebook.py  mini.py  toolkit_bootstrap.ipynb
docs/: TRAINING_AGENDA.md  atlas-ai-trainer-prep.md  atlas-ai-training-agenda.md  atlas-ai-training-slides-README.md  atlas-ai-training-slides.md  global-top.vue  requirements.hw.md
scripts/: check_syntax.py  delete_all_app_packages_instances.py  list_app_packages_instances.py  populate_edr_timeseries.py  setup_personal_hw_crud_app.py  test_dm_file_download.py  (+1 more)
(+220 files in other folders)
